<resources>
    <string name="app_name">Truth or Dare with images and custom games</string>
    <string name="lorem">A. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer
        took a galley of type and scrambled it to make a type specimen book.
    </string>
    <string name="test_done">You have successfully completed your test. Kindly submit test to proceed. </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="country">Country</string>
    <string name="region">Region/State/Province</string>
    <string name="submit">Submit</string>
    <string name="cancel">No I\'m not ready</string>
    <string name="start">Start Assessment</string>
    <string name="sign_up">SIGN UP</string>
    <string name="how_code">"How to get a code "</string>
    <string name="create_code">Create a Custom Test/Assessment</string>
    <string name="get_code">Get Access Code to an existing Test</string>
    <string name="explore_test">Explore the open Test in different categories </string>
    <string name="get_code_exp">Request for a test code from the test creator</string>
    <string name="create_code_exp">Visit sttudiom.com to create your own custom test</string>
    <string name="explore_test_exp">We have open test that you can take. </string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_all"><![CDATA[This is an <u>view all </u>.]]></string>
    <string name="about_us">Sttudiom provides schools with an outline admission testing and contieous assessment platform for easy and quick tests. Studdiom provides backup for seet questions and a topic by topic test system is employed to accertain a students knowledge across all topics non particular subject. Test questions can be edited and students can take test from any location and results are seen in real time. test is timed and devoid of interruptions as it is safe ad secured.</string>
    <string name="privacy2">Sttudiom provides schools with an outline admission testing and </string>
</resources>