<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_all"
    android:orientation="vertical"
    android:padding="@dimen/body_padding"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:background="@drawable/back_button_container"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/action_bar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/back_white" />

        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:text="Sign Up"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:text="@string/first_name" />

                <EditText
                    android:id="@+id/etFirstname"
                    style="@style/student_details_title_input"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/etLastname"

                    style="@style/student_details_title_input"

                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/etEmail"
                    style="@style/student_details_title_input"

                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewfa13"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Phone" />

                <EditText
                    android:id="@+id/etPhone"
                    style="@style/student_details_title_input"

                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/country" />

                <EditText
                    android:id="@+id/etCountry"
                    style="@style/student_details_title_input"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/region" />

                <EditText
                    android:id="@+id/etRegion"
                    style="@style/student_details_title_input"

                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textadView15"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Address" />

                <EditText
                    android:id="@+id/etAddress"
                    style="@style/student_details_title_input"

                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textVirew15"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/student_details_title_input"

                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/body_item_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViarew15"
                    style="@style/form_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/student_details_title_input"

                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <Button
                    android:id="@+id/button3"
                    style="@style/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_weight="0"
                    android:onClick="btnSubmit"

                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/sign_up"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Existing User ?"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="gotoLogin"
                        android:text="  Login"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>